--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -36,7 +36,7 @@
     background-color: $google-blue;
     border-radius: 2px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-
+    border-radius: 5px;
     transition: box-shadow .3s ease;
 
     .google-icon-wrapper {
@@ -45,7 +45,7 @@
         margin-left: 1px;
         width: 40px;
         height: 40px;
-        border-radius: 2px;
+        border-radius: 5px 0 0 5px;
         background-color: $white;
     }
     .google-icon {
@@ -61,6 +61,7 @@
         color: $white;
         font-size: 14px;
         letter-spacing: 0.2px;
+        padding-left: 55px;
     }
     &:hover {
         box-shadow: 0 0 6px $google-blue;
@@ -68,4 +69,12 @@
     &:active {
         background: $button-active-blue;
     }
+}
+.btn-login{
+    height: 40px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
 }
