--- a/src/components/admin/pages/product/product.css
+++ b/src/components/admin/pages/product/product.css
@@ -38,8 +38,8 @@
   }
   
   .productTopRight {
-    padding: 20px;
-    margin: 20px;
+    padding: 0px;
+    margin: 0px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
   }
@@ -69,6 +69,10 @@
     width: 250px;
     display: flex;
     justify-content:space-between;
+  }
+  .productInfoItemArticulo {
+    height: 250px;
+    display: flex;
   }
   
   /* .productInfoKey {
