--- a/src/components/buenSabor/footer.css
+++ b/src/components/buenSabor/footer.css
@@ -1,8 +1,39 @@
 footer {
-    background-color: #343a40!important;
+    background-color: #37241f!important;
     color: #fff;
-    padding: 20px 0;
+    padding: 40px 0 15px 0;
 }
-footer p{
-    margin:0;
+footer h4{
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 600;
+}
+footer ul{
+    padding: 0;
+    list-style: none;
+}
+footer ul li{
+    line-height: 35px;
+}
+footer ul li a{
+    color: #fff;
+}
+footer ul li a:hover{
+    color:#fccd4d;
+    text-decoration: none;
+}
+footer ul li {
+    line-height: 25px;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+.text-copyright {
+    margin: 0;
+    text-align: center;
+    font-size: 12px;
+    border-top: 1px solid #fff;
+    padding-top: 10px;
+    margin-top: 20px;
 }
