--- a/src/components/admin/pages/home/home.css
+++ b/src/components/admin/pages/home/home.css
@@ -1,8 +1,13 @@
+body{
+    background-color: #f7f8f9;
+}
 .home{
     flex: 4;
 }
-
 .homeWidgets{
     display: flex;
     margin: 20px;
+}
+h1, h2, h3, h4{
+    font-family: 'Source Sans Pro', sans-serif !important;
 }
