--- a/src/components/buenSabor/tarjeta.css
+++ b/src/components/buenSabor/tarjeta.css
@@ -4,8 +4,59 @@
     box-shadow: 0px 4px 6px 0px rgb(0 0 0 / 16%);
     -webkit-box-shadow: 0px 4px 6px 0px rgb(0 0 0 / 16%);
     -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.16);
+    border:0;
 }
 .card-body {
     padding: 10px 0;
     text-align: center;
 }
+.card-img-top {
+    border-radius: 10px;
+}
+.card-title {
+    margin-top: 2px;
+    font-weight: 600;
+    font-size: 23px;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-bottom: 0;
+}
+.card-text{
+    font-size: 26px;
+    font-weight: 700;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-bottom: 5px;
+    line-height: 28px;;
+}
+.detalleTarjeta{
+    color: #b83422;
+    padding: 0;
+    background-color: transparent;
+}
+.btnTarjeta{
+    background-color: #b83422;
+    color: #fff;
+    padding: 11px 25px 13px;
+    border-radius: 8px;
+    line-height: 1;
+}
+.detalleTarjeta, .btnTarjeta{
+    font-size: 16px;
+    cursor: pointer;
+    border: 0;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 100%;
+}
+.detalleTarjeta:hover, .btnTarjeta:hover{
+    opacity: 1;
+}
+.inputSearch{
+    margin-bottom: 30px;
+    border: 0;
+    padding: 10px 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px 0px rgb(0 0 0 / 16%);
+    -webkit-box-shadow: 0px 4px 6px 0px rgb(0 0 0 / 16%);
+    -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.16);
+}
+
