--- a/src/components/admin/pages/articuloDetalle/articuloDetalle.css
+++ b/src/components/admin/pages/articuloDetalle/articuloDetalle.css
@@ -10,14 +10,18 @@
   }
   
   .userAddButton {
-    width: 150px;
     border: none;
-    padding: 5px;
-    background-color: teal;
-    border-radius: 5px;
-    cursor: pointer;
+    padding: 10px 15px;
     color: white;
     font-size: 16px;
+    cursor: pointer;
+    background-color: #b83422;
+    color: #fff;
+    border-radius: 8px;
+    line-height: 1;
+    font-weight: 600;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin-bottom: 15px;
   }
   
   .userContainer {
@@ -30,6 +34,7 @@
     padding: 20px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    background-color: #fff;
   }
   
   .userUpdate {
@@ -38,6 +43,7 @@
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     margin-left: 20px;
+    background-color: #fff;
   }
   
   .userShowTop {
@@ -146,9 +152,11 @@
   .userUpdateButton{
       border-radius: 5px;
       border: none;
-      padding: 5px;
+      padding: 10px 15px;
+      color: white;
+      font-size: 16px;
       cursor: pointer;
-      background-color: darkblue;
+      background-color: #b83422;
       color: white;
       font-weight: 500;
       height: 40px;
