--- a/src/components/admin/pages/home/home.css
+++ b/src/components/admin/pages/home/home.css
@@ -3,6 +3,7 @@ body{
 }
 .home{
     flex: 4;
+    padding: 20px;
 }
 .homeWidgets{
     display: flex;
@@ -10,4 +11,9 @@ body{
 }
 h1, h2, h3, h4{
     font-family: 'Source Sans Pro', sans-serif !important;
+}
+.MuiDataGrid-root{
+    height: calc(100% - 60px) !important;
+    background-color: #fff;
+    padding: 0 10px;
 }
