--- a/src/components/admin/pages/product/newProduct.css
+++ b/src/components/admin/pages/product/newProduct.css
@@ -1,7 +1,13 @@
 .newProduct {
     flex: 4;
+    padding: 20px;
   }
   
+  .addProductTitle{
+    font-weight: bold;
+    font-size: 30px;
+    color: #37241f;
+  }
   .addProductForm {
     margin-top: 10px;
   }
@@ -29,13 +35,14 @@
   
   .addProductButton {
     margin-top: 10px;
-    padding: 7px 10px;
+    padding: 10px 15px;
     border: none;
-    border-radius: 10px;
-    background-color: darkblue;
+    border-radius: 5px;
+    background-color: #b83422;
     color: white;
     font-weight: 600;
     cursor: pointer;
+    line-height: 1;
   }
 
   .productTop {
@@ -47,16 +54,30 @@
   }
   
   .productTopRight {
-    padding: 0px;
+    padding: 20px;
     margin: 0px;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgb(0 0 0 / 75%);
+    background-color: #fff;
+  }
+  .productTopRight .userList{
+    padding: 20px 0;
+  }
+  .productTopRight .MuiDataGrid-root {
+    height: 100% !important;
+    background-color: #fff;
+    padding: 0 10px;
+    min-height: 300px;
+    display: flex;
+    position: relative !important;
+  }
+  .productTopRight .productAddButton{
+    margin-bottom: 0;
   }
 
   .productTopLeft {
     padding: 20px;
-    margin: 20px;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    flex: 1;
+    margin: 0 20px 0 0;
+    box-shadow: 0px 0px 15px -10px rgb(0 0 0 / 75%);
+    flex: 1 1;
+    background-color: #fff;
   }
