--- a/src/components/admin/sidebar.css
+++ b/src/components/admin/sidebar.css
@@ -4,6 +4,7 @@
     background-color: rgb(251, 251, 255);
     position: sticky;
     top: 50px;
+    box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 16%);
   }
   
   .sidebarWrapper {
@@ -16,8 +17,11 @@
   }
   
   .sidebarTitle {
-    font-size: 15px;
+    font-size: 18px;
     color: rgb(187, 186, 186);
+    font-weight: 900;
+    color: #b83422;
+    margin-bottom: 0px;
   }
   
   .sidebarList {
