--- a/src/components/admin/topbar.css
+++ b/src/components/admin/topbar.css
@@ -13,12 +13,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #fccd4d !important;
+    box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 16%);
   }
   
   .logo {
     font-weight: bold;
     font-size: 30px;
-    color: darkblue;
+    color: #37241f;
+    font-family: 'Source Sans Pro', sans-serif;
     cursor: pointer;
   }
   
@@ -31,14 +34,14 @@
     position: relative;
     cursor: pointer;
     margin-right: 10px;
-    color: #555;
+    padding-top: 6px;
   }
   
   .topIconBadge{
       width: 15px;
       height: 15px;
       position: absolute;
-      top: -5px;
+      top: 0px;
       right: 0px;
       background-color: red;
       color: white;
