Modificación para rebase

--- a/src/components/admin/pages/pedido/pedidoList.css
+++ b/src/components/admin/pages/pedido/pedidoList.css
@@ -1,7 +1,5 @@
 .productList{
     flex: 4;
-    padding: 20px;
-    height: 600px;
 }
 
 .productListItem{
@@ -19,21 +17,15 @@
 
 .productListEdit{
     border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: #3bb077;
+    color: white;
     cursor: pointer;
     margin-right: 20px;
-    border: none;
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #b83422;
-    color: #fff;
-    border-radius: 8px;
-    line-height: 1;
-    font-weight: 600;
-    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .productListDelete{
-    color: #b83422;
+    color: red;
     cursor: pointer;
 }
