--- a/src/components/admin/admin.css
+++ b/src/components/admin/admin.css
@@ -8,6 +8,13 @@
 }
 
 @media (min-width: 1200px){
-.containerAdmin {
-    max-width: 1300px;
-}}
+    .containerAdmin {
+        max-width: 1300px;
+    }
+}
+@media screen and (max-width: 575px) {
+    .containerAdmin {
+        flex-direction: column;
+        height: auto;
+    }
+}
