--- a/src/components/admin/pages/articuloDetalle/articuloDetalle.css
+++ b/src/components/admin/pages/articuloDetalle/articuloDetalle.css
@@ -163,3 +163,17 @@
       display: flex;
       margin-top: 220px;
   }
+
+@media screen and (max-width: 575px) {
+  .userUpdateForm, .userContainer {
+    flex-direction: column;
+  }
+  .userUpdateButton {
+    margin-top: 20px;
+    width: fit-content;
+  }
+  .userUpdate {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+}
