--- a/src/components/admin/pages/home/home.css
+++ b/src/components/admin/pages/home/home.css
@@ -17,3 +17,9 @@ h1, h2, h3, h4{
     background-color: #fff;
     padding: 0 10px;
 }
+
+@media screen and (max-width: 575px) {
+    .MuiDataGrid-root {
+        height: 450px !important;
+    }
+}
