--- a/src/components/admin/pages/product/product.css
+++ b/src/components/admin/pages/product/product.css
@@ -1,154 +1,166 @@
 .product {
-    flex: 4;
-    padding: 20px;
-  }
+  flex: 4;
+  padding: 20px;
+}
+
+.productTitle{
+  font-weight: bold;
+  font-size: 30px;
+  color: #37241f;
+}
+.productTitleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.productAddButton {
+  border: none;
+  padding: 10px 15px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #b83422;
+  color: #fff;
+  border-radius: 8px;
+  line-height: 1;
+  font-weight: 600;
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-bottom: 15px;
+}
+
+.productTop {
+  display: flex;
+}
+
+/* .productTopLeft, */
+.productTopLeft {
+  padding: 20px;
+  margin: 20px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  flex: 1;
+}
+
+.productTopRight {
+  flex: 2;
+}
+
+.productTopRight {
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.productInfoImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.productInfoTop {
+  display: flex;
+  align-items: center;
+}
+
+.productName {
+  font-weight: 600;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.productInfoBottom {
+  margin-top: 10px;
+}
+
+.productInfoItem {
+  width: 100%;
+  display: flex;
+}
+.productInfoItemArticulo {
+  display: flex;
+}
+
+/* .productInfoKey {
+  font-weight: 300;
+} */
+
+.productInfoValue {
+  font-weight: 300;
+}
+
+.productBottom {
+  margin: 20px 0;
+  box-shadow: 0px 0px 15px -10px rgb(0 0 0 / 75%);
+  background-color: #fff;
+  padding: 20px;
+}
+
+.productForm {
+  display: flex;
+  justify-content: space-between;
+}
+
+.productFormLeft {
+  display: flex;
+  flex-direction: column;
+}
+
+.productFormLeft > label {
+  margin-bottom: 10px;
+  color: gray;
+}
+
+.productFormLeft > input {
+  margin-bottom: 10px;
+  border: none;
+  padding: 5px;
+  border-bottom: 1px solid gray;
+}
+
+.productFormLeft >select{
+  margin-bottom: 10px;
+}
+
+.productUploadImg{
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.productFormRight{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.productUpload{
+  display: flex;
+  align-items: center;
+}
   
+.productButton{
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #b83422;
+  color:white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 575px) {
+  .MuiDataGrid-root {
+      height: 450px !important;
+  }
   .productTitle{
-    font-weight: bold;
-    font-size: 30px;
-    color: #37241f;
+    font-size: 22px;
   }
-  .productTitleContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .productAddButton {
-    border: none;
-    padding: 10px 15px;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #b83422;
-    color: #fff;
-    border-radius: 8px;
-    line-height: 1;
-    font-weight: 600;
-    font-family: 'Source Sans Pro', sans-serif;
-    margin-bottom: 15px;
-  }
-  
-  .productTop {
-    display: flex;
-  }
-  
-  /* .productTopLeft, */
-  .productTopLeft {
-    padding: 20px;
-    margin: 20px;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    flex: 1;
-  }
-
-  .productTopRight {
-    flex: 2;
-  }
-  
-  .productTopRight {
-    padding: 0px;
-    margin: 0px;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  }
-  
-  .productInfoImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 20px;
-  }
-  
-  .productInfoTop {
-    display: flex;
-    align-items: center;
-  }
-  
-  .productName {
-    font-weight: 600;
-    font-family: 'Source Sans Pro', sans-serif;
-  }
-  
-  .productInfoBottom {
-    margin-top: 10px;
-  }
-  
-  .productInfoItem {
-    width: 100%;
-    display: flex;
-  }
-  .productInfoItemArticulo {
-    display: flex;
-  }
-  
-  /* .productInfoKey {
-    font-weight: 300;
-  } */
-
-  .productInfoValue {
-    font-weight: 300;
-  }
-  
-  .productBottom {
-    margin: 20px 0;
-    box-shadow: 0px 0px 15px -10px rgb(0 0 0 / 75%);
-    background-color: #fff;
-    padding: 20px;
-  }
-  
   .productForm {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .productFormLeft {
-    display: flex;
     flex-direction: column;
   }
-  
-  .productFormLeft > label {
-    margin-bottom: 10px;
-    color: gray;
-  }
-  
-  .productFormLeft > input {
-    margin-bottom: 10px;
-    border: none;
-    padding: 5px;
-    border-bottom: 1px solid gray;
-  }
-  
-  .productFormLeft >select{
-    margin-bottom: 10px;
-  }
-  
-  .productUploadImg{
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    object-fit: cover;
-    margin-right: 20px;
-  }
-  
-  .productFormRight{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  
-  .productUpload{
-    display: flex;
-    align-items: center;
-  }
-  
-  .productButton{
-    border: none;
-    padding: 5px;
-    border-radius: 5px;
-    background-color: #b83422;
-    color:white;
-    font-weight: 600;
-    cursor: pointer;
-  }
+}
