--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -12,15 +12,15 @@
 }
 
 .btn-primary{
-    background-color: $primary;
+    background-color: #b83422;
     border-radius: 2px;
 
     &:disabled{
-        background-color: lighten($color: $primary, $amount: 15);
+        background-color: lighten($color: #b83422, $amount: 15);
     }
     
     &:hover{
-        background-color: darken($color: $primary, $amount: 10);
+        background-color: darken($color: #b83422, $amount: 10);
     }
 }
 
@@ -77,4 +77,5 @@
     font-weight: 600;
     letter-spacing: 0.5px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    background-color: #b83422;
 }
