--- a/src/components/carrito/Cart.css
+++ b/src/components/carrito/Cart.css
@@ -101,7 +101,7 @@ h2 {
   overflow-y: scroll;
   margin-top: 5px;
 }
-.productsContainer button{
+.productsContainerBtn{
   font-size: 14px;
   cursor: pointer;
   border: 0;
@@ -115,6 +115,22 @@ h2 {
   line-height: 1;
   margin: 10px 5px;
 }
+
+.productsContainerBtnDisabled{
+  font-size: 14px;
+  cursor: pointer;
+  border: 0;
+  font-weight: 600;
+  font-family: 'Source Sans Pro', sans-serif;
+  width: fit-content;
+  background-color: #858585;
+  color: #fff;
+  padding: 10px 19px;
+  border-radius: 8px;
+  line-height: 1;
+  margin: 10px 5px;
+}
+
 ::-webkit-scrollbar {
   -webkit-appearance: none;
 }
