--- a/src/components/admin/sidebar.css
+++ b/src/components/admin/sidebar.css
@@ -5,6 +5,7 @@
     position: sticky;
     top: 50px;
     box-shadow: 0px 5px 5px 0px rgb(0 0 0 / 16%);
+    overflow-y: auto;
   }
   
   .sidebarWrapper {
