--- a/src/components/buenSabor/inicio.css
+++ b/src/components/buenSabor/inicio.css
@@ -102,6 +102,10 @@
     font-size: 23px;
     margin-bottom: 0;
     text-transform: capitalize;
+    min-height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .display-tarjeta{
@@ -144,6 +148,74 @@
 }
 .mapabs{
     margin-top: 30px;
+}
+.swal2-styled.swal2-confirm{
+    background-color: #b83422 !important;
+}
+.contImg{
+    width: 100%;
+    height: 160px;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contImg img, .boxDetalle1 img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0px auto;
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 9;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    width: 100%;
+}
+.boxDetalle{
+    border-radius: 15px;
+    padding: 20px 30px;
+    box-shadow: 0px 4px 6px 0px rgb(0 0 0 / 16%);
+    -webkit-box-shadow: 0px 4px 6px 0px rgb(0 0 0 / 16%);
+    -moz-box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.16);
+    border: 1px solid rgba(0,0,0,.125);
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.boxDetalle1, .boxDetalle2{
+    width: 50%;
+}
+.boxDetalle1{
+    height: 300px;
+    overflow: hidden;
+    position: relative;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.boxDetalle2{
+    padding-left: 20px;
+}
+.boxDetalle2 h2{
+    margin: 0 0 10px 0;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 51px;
+    text-align: left;
+}
+.boxDetalle2 h3{
+    font-weight: 900;
+    color: #b83422;
+}
+.boxDetalle2 p{
+    font-weight: 600;
 }
 
 @media screen and (max-width: 992px){
@@ -241,5 +313,26 @@
     }
     .display-tarjeta a{
         width: 50%;
+    }
+    .tarjeta-categoria h4 {
+        font-size: 18px;
+        min-height: 40px;
+    }
+    .boxDetalle1, .boxDetalle2 {
+        width: 100%;
+    }
+    .boxDetalle {
+        flex-direction: column;
+    }
+    .boxDetalle1 {
+        height: 200px;
+    }
+    .boxDetalle2 {
+        padding-left: 0;
+        margin-top: 20px;
+    }
+    .boxDetalle2 h2 {
+        font-size: 30px;
+        line-height: 40px;
     }
 }
