--- a/src/components/buenSabor/tarjeta.css
+++ b/src/components/buenSabor/tarjeta.css
@@ -10,8 +10,22 @@
     padding: 10px 0;
     text-align: center;
 }
-.card-img-top {
+.contImg{
+    width: 100%;
+    height: 160px;
     border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.card-img-top {
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: 0px auto;
 }
 .card-title {
     margin-top: 2px;
