--- a/src/components/admin/pages/user/user.css
+++ b/src/components/admin/pages/user/user.css
@@ -166,6 +166,18 @@
       margin-top: 220px;
   }
 
+  /* input.clave{ 
+
+    white-space: nowrap;
+    
+    overflow: hidden;
+    
+    text-overflow: ellipsis;
+    
+    max-width: 100px;
+    
+    } */
+
 @media screen and (max-width: 575px) {
   .userTitle{
     font-size: 22px;
