Agregado que muestre los ingredientes y bien espaciados

--- a/src/components/buenSabor/inicio.css
+++ b/src/components/buenSabor/inicio.css
@@ -214,6 +214,9 @@
     font-weight: 900;
     color: #b83422;
 }
+.boxDetalle2 li{
+    font-weight: 900;
+}
 .boxDetalle2 p{
     font-weight: 600;
 }
