--- a/src/components/buenSabor/inicio.css
+++ b/src/components/buenSabor/inicio.css
@@ -69,7 +69,7 @@
     margin-bottom: 50px;
 }
 .titulo-inicio{
-    margin: 0 0 30px 0;
+    margin: 30px 0 30px 0;
     font-size: 50px;
     font-weight: 900;
     line-height: 51px;
