--- a/src/components/carrito/Cart.css
+++ b/src/components/carrito/Cart.css
@@ -175,8 +175,20 @@ h2 {
   font-size: 20px !important;
 }
 
-.carrito-2 button{
+.carrito-button-enabled{
   background-color: #b83422;
+  color: #fff;
+  padding: 9px 15px;
+  border-radius: 8px;
+  line-height: 1;
+  border: 0;
+  margin-right: 10px;
+  font-weight: 700;
+  font-size: 13px;
+  cursor: pointer;
+}
+.carrito-button-disabled{
+  background-color: #858585;
   color: #fff;
   padding: 9px 15px;
   border-radius: 8px;
