--- a/src/components/admin/sidebar.css
+++ b/src/components/admin/sidebar.css
@@ -48,10 +48,18 @@
       font-size: 20px !important;
   }
 
+@media screen and (max-width: 992px) {
+  .sidebar {
+    flex: inherit;
+    width: 200px;
+  }
+}
+
 @media screen and (max-width: 575px) {
   .sidebar {
       height: auto;
       position: relative;
       top: 0;
+      width: 100%;
   }
 }
